[project]
name = "ai-ticket-booking-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.2",
    "gradio>=6.19.0",
    "openai>=2.44.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
